--- a/index1.html
+++ b/index1.html
@@ -174,26 +174,29 @@
           </div>
           <div class="row">
             <div class="contact-form">
-                <form name="contact" method="POST" data-netlify="true">
-                  <div class="row">
-                    <div class="input-group">
+              <form name="contact" method="POST" data-netlify="true">
+                <div class="row">
+                  <p class="input-group">
+                      <label for="name">Name</label>
                       <input type="text" placeholder="Name" name="name" class="input-control" required>
-                    </div>
-                    <div class="input-group">
+                  </p>
+                  <p class="input-group">
+                      <label for="email">Email</label>
                       <input type="text" placeholder="Email" name="email" class="input-control" required>
-                    </div>
-                    <div class="input-group">
+                  </p class="input-group">
+                  <p class="input-group">
+                      <label for="subject">Subject</label>
                       <input type="text" placeholder="Subject" name="subject" class="input-control" required>
-                    </div>
-                    <div class="input-group">
+                  </p>
+                  <p class="input-group">
+                      <label for="message">Message</label>
                       <textarea placeholder="Message" name="message" class="input-control" required></textarea>
-                    </div>
-                    <div class="submit-btn">
-                      <button type="submit" class="btn">send message</button>
-                    </div>
+                  </p>
+                  <div class="submit-btn">
+                    <button type="submit" class="btn">send message</button>
                   </div>
-                </form>
-              
+                </div>
+              </form>
               <div class="contact-info">
                 <div class="contact-info-item">
                   <h3>Email:</h3>
