--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                     <a href="https://www.facebook.com/profile.php?id=100007665999117" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://www.instagram.com/n1kolay.vasilev/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/nikolay-vasilev-22b01996/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.github.com/nikovassi" target="_blank"><i class="fab fa-github"></i></a>
                   </div>
                 </div>
               </div>
