new text about me

--- a/index.html
+++ b/index.html
@@ -76,12 +76,8 @@
             </div>
             <div class="about-text">
               <p>
-                I have been studing as a Javascript developer for the one year
-                and I have a strong foundation in Javascript and I am studing in
-                React. I have also worked with HTML, and CSS. I am a motivated
-                and hardworking individual who is always looking for new
-                challenges. I am a lifelong learner and I am committed to
-                continuing to grow as a developer.
+                I've always loved facing challenges and leaving my comfort zone. Up to now, I haven't stop developing myself in different working fields but my love to technologies and the help of the software university, have made programming my main goal. For me, programming is a constant problem-solving which makes it quite interesting and fascinating occupation. What I like about this job is that it requires consistent learning and evolving. Some of the most useful skills I've developed so far are problem-solving, team-working and working towards a target. I believe these skills are essential to being a successful software developer. 
+I continue learning some new stuff within javascript, HTML и CSS field as I wish to work and develop in the world of programming.
               </p>
               <h3>skills</h3>
               <div class="skills">
